devops/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quicklink
  labels:
    app: quicklink
